add: 查漏补缺